--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -145,7 +145,7 @@
 }
 
 .theme-dark .home_events {
-    background-color: var(--dark-sky);
+    background-color: #333333;;
     color: white;
 }
 
@@ -187,9 +187,11 @@ letter-spacing: -0.02em;
     flex-direction: row;
     justify-content: space-around;
     position: relative;
-    margin: 3%;
+    margin-top: 12%;
     overflow: hidden;
+	margin-bottom: 4%
 }
+
 
 /*
 .home_events_list div{
@@ -205,14 +207,29 @@ letter-spacing: -0.02em;
     
 }
 
-.home_events_list2{
-    margin-top: 5%;
+.theme-dark .home_events_cloud{
+	background-color: #333333;
 }
 
 .home_events_list1, .home_events_list3{
-    margin-top: 9%;
+    margin-top: 16%;
 }
 
+.theme-light .home_events_list1 img,.theme-light .home_events_list2 img,.theme-light .home_events_list3 img{
+    border: black 2px solid;
+	-webkit-border-radius: 40px 40px 40px 40px;
+
+    border-radius: 16px 16px 16px 16px ;
+	
+}
+/*.theme-dark .home_events_list1 img,.theme-dark .home_events_list2 img,.theme-dark .home_events_list3 img{
+    border:white 2px solid;
+	
+
+    border-radius: 16px 16px 16px 16px ;
+	
+}
+*/
 /*
 .home_events_list1{
     display: flex;
