--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -280,11 +280,15 @@
 	text-align: center;
 }
 
+.home_footer{
+	max-height: 10%;
+}
+
 .home_footer_one{
 	display: flex;
 	flex-direction: row;
 	background-color: #FFF8E1;
-	padding:2% 7%;
+	padding:2% 7% ;
 	align-items: center;
     justify-content: space-between;
 }
@@ -305,7 +309,7 @@
 .home_footer_two{
 	background: linear-gradient(0deg, #1A1A1A, #1A1A1A);
     color:white;
-     padding: 5%;
+     padding: 2%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -313,13 +317,17 @@
 }
 
 .home_footer_two_left div{
-    font-size: 24px;
+    font-size: 15px;
 }
 
 .home_footer_two_right{
     display: flex;
     flex-direction: row;
-    line-height: 35px;
+    line-height: 23px;
+}
+
+.home_footer_two_right div p{
+	font-size: 12px;
 }
 
 .home_footer_img{
