--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -326,6 +326,7 @@
 	font-size: 12px;
 }
 
+/*
 .home_footer_img{
 	background: linear-gradient(0deg, #1A1A1A, #1A1A1A);
 }
@@ -334,3 +335,4 @@
 	width: 100%;
 	height:180px
 }
+*/
