--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -35,11 +35,11 @@
 }
 
 .theme-dark .home_landing, .theme-dark .home_story {
-	border-bottom: 4px solid var(--cream);
+	border-bottom: 2px solid var(--cream);
 }
 
 .theme-light .home_landing, .theme-light .home_story {
-	border-bottom: 4px solid var(--eerie-black);
+	border-bottom: 2px solid var(--eerie-black);
 } 
 
 
@@ -290,6 +290,10 @@ justify-content: space-between;
 	text-align: center;
 }
 
+.home_footer {
+	position: relative;
+}
+
 .home_footer_one{
 	display: flex;
 	flex-direction: row;
@@ -336,13 +340,17 @@ justify-content: space-between;
 	font-size: 12px;
 }
 
-/*
+
 .home_footer_img{
-	background: linear-gradient(0deg, #1A1A1A, #1A1A1A);
+	opacity: 10%;
+	position: absolute;
+	width: 100%;
+	z-index: 2;
+	bottom: 0%;
+	height: 100%;
 }
 
 .home_footer_img > img {
 	width: 100%;
-	height:180px
+	height: 100%;
 }
-*/
