--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -83,7 +83,7 @@
 }
 
 .home_about {
-	height: max(900px, 100vh);
+	height: max(100vh, 100%);
 	position: relative;
 } 
 
@@ -105,19 +105,30 @@
 .home_about_inner {
 	display: flex;
 	align-items: center;
-	margin: 0% 0% 0% 10%;
+	width: 100%;
+	height: 100%;
 }
-
+.home_about_content {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 20px;
+	padding-bottom: 200px;
+}
 .home_about_content > p {
-	margin-bottom: 10%;
+	padding: 0% 0% 0% 10%;
 	font-size: 20px;
 }
 
 .home_about_image {
-	transform: scale(60%);
+	width: 40%;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+}
+
+.home_about_image  {
+	transform: scale(60%);
 }
 
 .llama_cloud {
