--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -1,13 +1,13 @@
     .Events_header {
         width: 100%;
-        height: max(50vh, 600px);
+        height: max(50vh, 550px);
         text-align: center;
         display: flex;
         align-items: center;
         justify-content: center;
         font-weight: 600;
         font-size: 122px;
-        line-height: 90.42px; 
+        line-height: 90px;
         display: flex;
         flex-direction: column;
     }
@@ -83,7 +83,7 @@
     }
 
     .events_searchbar_clear {
-        width: 5%;
+        width: max(5%, 50px);
         background-color: rgb(56, 55, 55);
         color: dimgrey;
         border-radius: 0px 30px 30px 0px;
@@ -93,20 +93,22 @@
     }
 
     .events_filter{
+        position: relative;
         margin: auto;
-        width: 50%;
+        flex-wrap: wrap;
+        width: 60%;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-top: 5%;
+        top: 50px;
         gap: 25px;
     }
 
     .events_container {
         position: relative;
-        padding: 130px 5%;
+        padding: 100px 10%;
         display: flex;
         flex-wrap: wrap;
-        gap: 30px;
-        justify-content: space-evenly;
+        gap: 40px;
+        justify-content: space-around;
     }
