--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -298,7 +298,7 @@ justify-content: space-between;
 	padding-bottom: 7%;
 }
 
-.home_earth_clouds {
+#home_earth_clouds {
 	position: absolute;
 	top: 0%;
 	transition: all 0.5s ease;
