--- a/src/components/FilledButton.css
+++ b/src/components/FilledButton.css
@@ -1,14 +1,10 @@
+.FilledButton {
+	display: grid;
+	place-items: center;
+}
+
 .FilledButton > button {
 	padding: 15%;
 	border-radius: 280px;
 	width: max-content;
-}
-
-#joinUs {
-	padding: 15% 35%;
-}
-
-#events {
-	width: 105px;
-	text-align: center;
 }
