--- a/src/components/FilledButton.css
+++ b/src/components/FilledButton.css
@@ -11,4 +11,13 @@
 #events {
 	width: 105px;
 	text-align: center;
+	font-size: 20px;
+}
+
+@media (width <= 750px) {
+	#events {
+		width: 55px;
+		font-size: 10px;
+	}
+	
 }
