--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -345,6 +345,7 @@ justify-content: space-between;
 }
 
 .home_story_buttons {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	transform: translateY(-100%);
