--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -106,7 +106,21 @@
     linear-gradient(135deg, transparent 0%,transparent 43%,dimgray 45%,dimgray 55%,transparent 57%,transparent 100%);
     }
 
-    .events_filter{
+    .events_filter_container {
+        position: relative;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+        top: 50px;
+    }
+
+    .events_filter {
+        display: flex;
+        gap: 15px;
+    }
+
+    /* .events_filter{
         position: relative;
         margin: auto;
         width: 50%;
@@ -115,7 +129,7 @@
         align-items: center;
         top: 50px;
         gap: 15px;
-    }
+    } */
 
     .events_container {
         position: relative;
@@ -158,7 +172,6 @@
         #Events_earth_cloud {
             width: 100%;
             height: 60%;
-            margin-top: 5%;
         }
         
         .events_balloon {
@@ -177,10 +190,23 @@
     @media (width <= 550px) {
         .events_balloon {
             scale: 40%;
-            width: 350%;
+            width: 400%;
             margin-top: 30%;
         }
         #Events_earth_cloud {
             height: 70%;
+        }
+    }
+
+    #events {
+        width: 105px;
+        text-align: center;
+        font-size: 20px;
+    }
+    
+    @media (width <= 750px) {
+        #events {
+            width: max(48px, 10vw);
+            font-size: 10px;
         }
     }
