--- a/src/pages/events/components/EventComp.css
+++ b/src/pages/events/components/EventComp.css
@@ -60,20 +60,20 @@
 
 .component_main_statusBar{
     display: flex;
-    width: 70%;
-    background-color: rgb(56, 55, 55);
+    width: 140px;
+    background-color: #4B4B4B;
     justify-content: center;
-    padding: 15px;
+    align-items: center;
+    gap: 5px;
+    padding: 10px;
     border-radius: 100px;
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
-  background-color: green;
+  height: 15px;
+  width: 15px;
+  background-color: #34A853;
   border-radius: 50%;
-  margin-top: 8px;
-  margin-right: 5px;
   display: inline-block;
 }
 
@@ -91,10 +91,14 @@
 .component_desc_btn {
     font-size: 20px;
     height: 50px;
-    color: white;
     background-color: #4285f4;
     font-weight: 300;
     border-radius: 10px;
+}
+
+.component_desc_btn > a {
+    color: white;
+    text-decoration: none;
 }
 
 .component_desc_readmore{
